# phasmoclock

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install_linux.sh
.cargo/: config.toml
.github/workflows/: release.yml
assets/: phasmoclock.desktop
src/: bpm.rs  config.rs  gui.rs  keyscan.rs  main.rs  stopwatch.rs
