[package]
name = "phasmoclock"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
# These will only compile when building for Linux
evdev = "0.13.2"
kbd-evdev = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
# This will only compile when building for Windows
rdev = "0.5.3"
