[package]
name = "phasmoclock"
version = "0.1.4"
edition = "2024"

[dependencies]
#eframe = "0.34.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }
directories = "5.0"
anyhow = "1.0.102"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
rust-embed = "8.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
# These will only compile when building for Linux
evdev = "0.13.2"
kbd-evdev = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
# This will only compile when building for Windows
rdev = "0.5.3"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }


[build-dependencies]
winres = "0.1"
embed-resource = "2.4"
